@@ -1,9 +1,5 @@
 package game2048;
 
-import java.time.LocalTime;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
-import java.util.Map;
 import javafx.animation.Animation;
 import javafx.animation.KeyFrame;
 import javafx.animation.KeyValue;
@@ -11,18 +7,12 @@ import javafx.animation.Timeline;
 import javafx.application.HostServices;
 import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
-import javafx.beans.property.BooleanProperty;
-import javafx.beans.property.IntegerProperty;
-import javafx.beans.property.SimpleBooleanProperty;
-import javafx.beans.property.SimpleIntegerProperty;
-import javafx.beans.property.SimpleStringProperty;
-import javafx.beans.property.StringProperty;
+import javafx.beans.property.*;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Group;
-import static javafx.scene.Node.BASELINE_OFFSET_SAME_AS_HEIGHT;
 import javafx.scene.control.Button;
 import javafx.scene.control.Hyperlink;
 import javafx.scene.control.Label;
@@ -37,16 +27,30 @@ import javafx.scene.text.TextAlignment;
 import javafx.scene.text.TextFlow;
 import javafx.util.Duration;
 
+import java.time.LocalTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.util.Map;
+
 /**
  *
  * @author jpereda
  */
-public class Board extends Group {
-    public static final int CELL_SIZE = 128;
+class Board extends Group {
+
+    static final int CELL_SIZE = 128;
+
     private static final int BORDER_WIDTH = (14 + 2) / 2;
+
     private static final int TOP_HEIGHT = 92;
+
     private static final int GAP_HEIGHT = 50;
+
     private static final int TOOLBAR_HEIGHT = 80;
+
+    private static final double BASELINE_OFFSET_SAME_AS_WIDTH = Double.NEGATIVE_INFINITY;
+
+    private static final double BASELINE_OFFSET_SAME_AS_HEIGHT = Double.NEGATIVE_INFINITY;
 
     private final IntegerProperty gameScoreProperty = new SimpleIntegerProperty(0);
     private final IntegerProperty gameBestProperty = new SimpleIntegerProperty(0);
@@ -99,13 +103,17 @@ public class Board extends Group {
     private Timeline timerPause;
     
     private final int gridWidth;
-    private final GridOperator gridOperator;
+    private final int gridHeight;
+
+    private final GridOperator gridOperator = new GridOperator();
     private final SessionManager sessionManager;
 
-    public Board(GridOperator grid){
-        this.gridOperator=grid;
-        gridWidth = CELL_SIZE * grid.getGridSize() + BORDER_WIDTH * 2;
-        sessionManager = new SessionManager(gridOperator);
+    Board() {
+        int borderSize = CELL_SIZE * GridOperator.GRID_SIZE + BORDER_WIDTH * 2;
+        gridWidth = borderSize;
+        gridHeight = borderSize;
+
+        sessionManager = new SessionManager();
         
         createScore();
         createGrid();
@@ -158,9 +166,8 @@ public class Board extends Group {
         hTime.setAlignment(Pos.BOTTOM_RIGHT);
         lblTime.getStyleClass().addAll("game-label","game-time");
         lblTime.textProperty().bind(clock);
-        timer=new Timeline(new KeyFrame(Duration.ZERO, e->{
-            clock.set(LocalTime.now().minusNanos(time.toNanoOfDay()).format(fmt));
-        }),new KeyFrame(Duration.seconds(1)));
+        timer=new Timeline(new KeyFrame(Duration.ZERO,
+                e-> clock.set(LocalTime.now().minusNanos(time.toNanoOfDay()).format(fmt))),new KeyFrame(Duration.seconds(1)));
         timer.setCycleCount(Animation.INDEFINITE);
         hTime.getChildren().add(lblTime);
         
@@ -199,12 +206,12 @@ public class Board extends Group {
 
         HBox hBottom = new HBox();
         hBottom.getStyleClass().add("game-backGrid");
-        hBottom.setMinSize(gridWidth, gridWidth);
-        hBottom.setPrefSize(gridWidth, gridWidth);
-        hBottom.setMaxSize(gridWidth, gridWidth);
+        hBottom.setMinSize(gridWidth, gridHeight);
+        hBottom.setPrefSize(gridWidth, gridHeight);
+        hBottom.setMaxSize(gridWidth, gridHeight);
         
         // Clip hBottom to keep the dropshadow effects within the hBottom
-        Rectangle rect = new Rectangle(gridWidth, gridWidth);
+        Rectangle rect = new Rectangle(gridWidth, gridHeight);
         hBottom.setClip(rect);
         hBottom.getChildren().add(gridGroup);
         
@@ -227,13 +234,13 @@ public class Board extends Group {
         vGame.getChildren().add(hToolbar); 
     }
 
-    public void setToolBar(HBox toolbar){
+    void setToolBar(HBox toolbar){
         toolbar.disableProperty().bind(layerOnProperty);
         toolbar.spacingProperty().bind(Bindings.divide(vGame.widthProperty(), 10));
         hToolbar.getChildren().add(toolbar);        
     }
     
-    public void tryAgain(){
+    void tryAgain(){
         if(!gameTryAgainProperty.get()){
             gameTryAgainProperty.set(true);
         }
@@ -270,7 +277,7 @@ public class Board extends Group {
         private final String style1, style2;
         private final boolean pause;
         
-        public Overlay(String message, String warning, Button btn1, Button btn2, String style1, String style2, boolean pause){
+        Overlay(String message, String warning, Button btn1, Button btn2, String style1, String style2, boolean pause){
             this.message=message;
             this.warning=warning;
             this.btn1=btn1;
@@ -307,7 +314,7 @@ public class Board extends Group {
     
     private void initGameProperties() {
         
-        overlay.setMinSize(gridWidth, gridWidth);
+        overlay.setMinSize(gridWidth, gridHeight);
         overlay.setAlignment(Pos.CENTER);
         overlay.setTranslateY(TOP_HEIGHT + GAP_HEIGHT);
         
@@ -316,7 +323,7 @@ public class Board extends Group {
         
         buttonsOverlay.setAlignment(Pos.CENTER);
         buttonsOverlay.setTranslateY(TOP_HEIGHT + GAP_HEIGHT + gridWidth / 2);
-        buttonsOverlay.setMinSize(gridWidth, gridWidth / 2);
+        buttonsOverlay.setMinSize(gridWidth, gridHeight / 2.);
         buttonsOverlay.setSpacing(10);
         
         bTry.getStyleClass().add("game-button");
@@ -391,10 +398,10 @@ public class Board extends Group {
                 TextFlow flow = new TextFlow();
                 flow.setTextAlignment(TextAlignment.CENTER);
                 flow.setPadding(new Insets(10,0,0,0));
-                flow.setMinSize(gridWidth, gridWidth);
-                flow.setPrefSize(gridWidth, gridWidth);
-                flow.setMaxSize(gridWidth, gridWidth);
-                flow.setPrefSize(BASELINE_OFFSET_SAME_AS_HEIGHT, BASELINE_OFFSET_SAME_AS_HEIGHT);
+                flow.setMinSize(gridWidth, gridHeight);
+                flow.setPrefSize(gridWidth, gridHeight);
+                flow.setMaxSize(gridWidth, gridHeight);
+                flow.setPrefSize(BASELINE_OFFSET_SAME_AS_WIDTH, BASELINE_OFFSET_SAME_AS_HEIGHT);
                 Text t00 = new Text("2048");
                 t00.getStyleClass().setAll("game-label","game-lblAbout");
                 Text t01 = new Text("FX");
@@ -456,7 +463,7 @@ public class Board extends Group {
                 getChildren().removeAll(overlay, buttonsOverlay);
                 // Keep the focus on the game when the layer is removed:
                 getParent().requestFocus();
-            } else if(b1){
+            } else {
                 // Set focus on the first button
                 buttonsOverlay.getChildren().get(0).requestFocus();
             }
@@ -464,7 +471,7 @@ public class Board extends Group {
         
     }
     
-    public void setHostServices(HostServices hostServices){
+    void setHostServices(HostServices hostServices){
         this.hostServices=hostServices;
     }
     
@@ -496,7 +503,7 @@ public class Board extends Group {
         resetGame.set(true);
     }
     
-    public void animateScore() {
+    void animateScore() {
         if(gameMovePoints.get()==0){
             return;
         }
@@ -521,21 +528,21 @@ public class Board extends Group {
         timeline.play();
     }
     
-    public void addTile(Tile tile){
-        double layoutX = tile.getLocation().getLayoutX(CELL_SIZE) - (tile.getMinWidth() / 2);
-        double layoutY = tile.getLocation().getLayoutY(CELL_SIZE) - (tile.getMinHeight() / 2);
+    void addTile(Tile tile){
+        double layoutX = tile.getLocation().getLayoutX() - (tile.getMinWidth() / 2);
+        double layoutY = tile.getLocation().getLayoutY() - (tile.getMinHeight() / 2);
 
         tile.setLayoutX(layoutX);
         tile.setLayoutY(layoutY);
         gridGroup.getChildren().add(tile);
     }
     
-    public Tile addRandomTile(Location randomLocation) {
+    Tile addRandomTile(Location randomLocation) {
         Tile tile = Tile.newRandomTile();
         tile.setLocation(randomLocation);
 
-        double layoutX = tile.getLocation().getLayoutX(CELL_SIZE) - (tile.getMinWidth() / 2);
-        double layoutY = tile.getLocation().getLayoutY(CELL_SIZE) - (tile.getMinHeight() / 2);
+        double layoutX = tile.getLocation().getLayoutX() - (tile.getMinWidth() / 2);
+        double layoutY = tile.getLocation().getLayoutY() - (tile.getMinHeight() / 2);
 
         tile.setLayoutX(layoutX);
         tile.setLayoutY(layoutY);
@@ -547,121 +554,118 @@ public class Board extends Group {
         return tile;
     }
     
-    public Group getGridGroup() {
+    Group getGridGroup() {
         return gridGroup;
     }
     
-    public void startGame(){
+    void startGame(){
         restoreRecord();
 
         time=LocalTime.now();
         timer.playFromStart();
     }
     
-    public void setPoints(int points){
-        gameMovePoints.set(points);
-    }
-   
-    public int getPoints() {
-        return gameMovePoints.get();
+    void setZeroPoints(){
+        gameMovePoints.set(0);
     }
     
-    public void addPoints(int points){
+    void addPoints(int points){
         gameMovePoints.set(gameMovePoints.get() + points);
         gameScoreProperty.set(gameScoreProperty.get() + points);
     }
     
-    public void setGameOver(boolean gameOver){
-        gameOverProperty.set(gameOver);
+    void setGameOver(){
+        gameOverProperty.set(true);
     }
     
-    public void setGameWin(boolean won){
+    void setGameWin(){
         if(!gameWonProperty.get()){
-            gameWonProperty.set(won);
+            gameWonProperty.set(true);
         }
     }
-    public void pauseGame(){
+
+    void pauseGame(){
         if(!gamePauseProperty.get()){
             gamePauseProperty.set(true);
         }
     }
-    public void aboutGame(){
+
+    void aboutGame(){
         if(!gameAboutProperty.get()){
             gameAboutProperty.set(true);
         }
     }
-    public void quitGame(){
+
+    void quitGame(){
         if(!gameQuitProperty.get()){
             gameQuitProperty.set(true);
         }
     }
     
-    public BooleanProperty isLayerOn(){
+    BooleanProperty isLayerOn(){
         return layerOnProperty;
     }
     
-    public BooleanProperty resetGameProperty() {
+    BooleanProperty resetGameProperty() {
         return resetGame;
     }
     
-    public BooleanProperty clearGameProperty() {
+    BooleanProperty clearGameProperty() {
         return clearGame;
     }
     
-    public BooleanProperty saveGameProperty() {
+    BooleanProperty saveGameProperty() {
         return saveGame;
     }
     
-    public BooleanProperty restoreGameProperty() {
+    BooleanProperty restoreGameProperty() {
         return restoreGame;
     }
     
-    public boolean saveSession() {
+    void saveSession() {
         if(!gameSaveProperty.get()){
             gameSaveProperty.set(true);
         }
-        return true;
     }
     
     /*
     Once we have confirmation
     */
-    public void saveSession(Map<Location, Tile> gameGrid) {
+    void saveSession(Map<Location, Tile> gameGrid) {
         saveGame.set(false);
         sessionManager.saveSession(gameGrid, gameScoreProperty.getValue(), LocalTime.now().minusNanos(time.toNanoOfDay()).toNanoOfDay());
         keepGoing();
     }
     
-    public boolean restoreSession() {
+    void restoreSession() {
         if(!gameRestoreProperty.get()){
             gameRestoreProperty.set(true);
         }
-        return true;
     }
     
     /*
     Once we have confirmation
     */
-    public boolean restoreSession(Map<Location, Tile> gameGrid) {
+    boolean restoreSession(Map<Location, Tile> gameGrid) {
         timerPause.stop();
         restoreGame.set(false);
         doClearGame();
         timer.stop();
-        StringProperty sTime=new SimpleStringProperty("");
-        int score = sessionManager.restoreSession(gameGrid, sTime);
+        StringProperty time = new SimpleStringProperty("");
+        int score = sessionManager.restoreSession(gameGrid, time);
         if (score >= 0) {
             gameScoreProperty.set(score);
             // check tiles>=2048
             gameWonProperty.set(false);
-            gameGrid.forEach((l,t)->{
-               if(t!=null && t.getValue()>=GameManager.FINAL_VALUE_TO_WIN){
+            gameGrid.forEach((l,t)-> {
+               if(t != null && t.getValue() >= GameManager.FINAL_VALUE_TO_WIN) {
                    gameWonProperty.removeListener(wonListener);
                    gameWonProperty.set(true);
                    gameWonProperty.addListener(wonListener);
                }
             });
-            if(!sTime.get().isEmpty()){
-                time = LocalTime.now().minusNanos(new Long(sTime.get()));
+            if(!time.get().isEmpty()) {
+                this.time = LocalTime.now().minusNanos(Long.valueOf(time.get()));
             }
             timer.play();
             return true;
@@ -671,14 +675,12 @@ public class Board extends Group {
         return false;
     }
     
-    public void saveRecord() {
-        RecordManager recordManager = new RecordManager(gridOperator.getGridSize());
-        recordManager.saveRecord(gameScoreProperty.getValue());
+    void saveRecord() {
+        sessionManager.saveRecord(gameScoreProperty.getValue());
     }
     
     private void restoreRecord() {
-        RecordManager recordManager = new RecordManager(gridOperator.getGridSize());
-        gameBestProperty.set(recordManager.restoreRecord());
+        gameBestProperty.set(sessionManager.restoreRecord());
     }
     
 }
